2013-11-26  Cedric Bail

	* Evas: Allow fuzziness on the texture format returned by GL.

2013-11-25  Tom Hacohen

        * Evas textblock: Fixed wrapping of lines ending with whites.

2013-11-25  ChunEon Park (Hermet)

        * Evas: Fix proxy render to update the proxies recursively. If a proxy
        has proxies, all the chainged proxies should be updated recursively.

2013-11-21  ChunEon Park (Hermet)

        * Edje: Fix to update map-enabled part when the edje object is moved.

2013-11-20  Cedric Bail

        * Eina: Fix a possible race condition during eina_file_close.
        * Edje: Fix use of eina_hash_pointer to actually look at the pointer.

2013-11-19  Tom Hacohen

        * Evas textblock: Fixed order of tags inserted with markup_app/prepend.

2013-11-05  Youngbok Shin

        * Edje: Add null checking for name of anchor and item in geometry get
        functions.

2013-11-03  Christophe Sadoine

        * Eet: Added EET_DATA_DESCRIPTOR_ADD_MAPPING_BASIC().

2013-10-24  Sung W. Park (sung_)

        * EvasGL: Fixed direct rendering mode not clipping to its clip region.

2013-10-24  Youngbok Shin

        * Evas: Fix textblock rendering to properly set render operation on the
        context.

2013-10-18  Youngbok Shin

        * Evas: Fixed the textblock format to be drawn according to the glyph's
        horizontal advance width.

2013-10-15  ChunEon Park (Hermet)

        * Evas: Fixed the map surface to be updated properly. By tranversing the
        whole of the map target's tree, it decides to update the map
        surface to be redrawn if one of the objects is changed except the
        clipper itself.

2013-10-15  ChunEon Park (Hermet)

        * Edje: Fixed memory leak in the edje map color transition.

2013-10-11  Carsten Haitzler (The Rasterman)

        * Eina: deprecate/remove all the eina_error setting (and getting)
        within efl no one uses it and it frankly it much more pain